Added Movie Details page.

--- a/app/src/main/res/layout/movie_view_item.xml
+++ b/app/src/main/res/layout/movie_view_item.xml
@@ -9,7 +9,8 @@
         android:layout_height="wrap_content"
         android:scaleType="fitStart"
         android:adjustViewBounds="true"
-        android:contentDescription="@string/movie_image" />
+        android:contentDescription="@string/movie_image"
+        android:layout_margin="1dp" />
 
     <TextView
         android:id="@+id/text"
